--- a/access-point/main/CMakeLists.txt
+++ b/access-point/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "access_point.c" "access_point_server.h" "access_point_server.c"
+idf_component_register(SRCS "access_point.c" "access_point_server.h" "access_point_server.c" "i2c_lcd.h" "i2c_lcd.c"
                     INCLUDE_DIRS ".")
